# user-transactions

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  makefile  pyproject.toml
user_transactions/auth/jwt/: manager.py
user_transactions/auth/v1/: authentication.py  errors.py  routes.py  security.py
user_transactions/middlewares/: request.py
user_transactions/models/: definitions.py  http.py
user_transactions/models/v1/: login.py  transaction.py  user.py
user_transactions/scripts/: generate_data.py
user_transactions/storage/: account_976133242399.csv  account_976133242399_2024.csv
user_transactions/storage/email/: template.html
user_transactions/transaction/v1/: balance.py  db.py  process.py  routes.py
